# Semenovyh_timofey_ris1_project

car-picker-cpp/: Makefile  README.md  car_picker  cars.db
car-picker-cpp/qt-client/: CMakeLists.txt  Makefile  README.md  car_picker_qt.pro  landing.qrc  moc_MainWindow.cpp
car-picker-cpp/qt-client/car_picker_qt.app/Contents/: Info.plist
car-picker-cpp/qt-client/car_picker_qt.app/Contents/MacOS/: car_picker_qt
car-picker-cpp/qt-client/src/: MainWindow.cpp  MainWindow.h  main.cpp
car-picker-cpp/src/: client_tools.cpp  client_tools.h  db.cpp  db.h  html.cpp  html.h  http.cpp  http.h  main.cpp  reco.cpp  reco.h  session.cpp  session.h
car-picker-cpp/static/: style.css
